--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,7 +9,7 @@
     <title>La cultura</title>
 
     <!--Hojas de estilo propias-->
-    <link rel="stylesheet" href="/resources/assets/css/style.css">
+    <link rel="stylesheet" href="resources/assets/css/style.css">
 
     <!--CDN-->
     <!-- Latest compiled and minified CSS -->
@@ -43,13 +43,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/productos/productos.html">Productos</a>
+                    <a class="nav-link" href="productos/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/registro.html">Iniciar Sesion</a>
+                    <a class="nav-link" href="login/registro.html">Iniciar Sesion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login/registro.html">Registrarse</a>
+                    <a class="nav-link" href="login/registro.html">Registrarse</a>
                 </li>
             </ul>
         </div>
